infrastructure/kubernetes-dashboard/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-httproute
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
    namespace: traefik
  hostnames:
  - dashboard.kube.slc.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
